<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Simple Shopping</string>
	<string name="photo_description">Item Photo</string>
	<string name="autocomplete">Auto complete</string>
	
	<string name="menu_insert">Insert Item</string>
	<string name="menu_currency">Change Currency</string>
	<string name="menu_clear_checked">Clear Checked Items</string>
	
	<string name="context_menu_title">Item alteration</string>
	<string name="context_menu_edit">Edit Item</string>
	<string name="context_menu_delete">Delete Item</string>
	
	<string name="edit_textview_name">Item name:</string>
	<string name="edit_textview_price">Price per item:</string>	
	<string name="edit_textview_quantity">Number of items:</string>
	<string name="edit_button_save">Save</string>
	<string name="edit_title">Edit Item</string>
	
	<string name="actionbar_new">New Item</string>
	<string name="actionbar_currency">Change Currency</string>
	
	<string name="footer_total_cost">Total cost:</string>
	
	<string name="currency_label_usd">$</string>
	<string name="currency_usd">USD</string>
	<string name="currency_label_eur">€</string>
	<string name="currency_eur">EUR</string>
	<string name="currency_label_dkk">Kr</string>
	<string name="currency_dkk">DKK</string>
	<string name="currency_label_gbp">£</string>
	<string name="currency_gbp">GBP</string>
</resources>