<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF380" >

    
        <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_textview_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

        <EditText
            android:id="@+id/editText_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences">
            <requestFocus/>
        </EditText>

        <TextView
            android:id="@+id/textView_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_textview_quantity"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editText_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_textview_price"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editText_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_button_save" />

</LinearLayout>