<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#FFF380" >
 
    <LinearLayout android:id="@+android:id/action_bar" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#CC3333"
        >
        
        <TextView android:id="@+android:id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/app_name"
        android:textSize="27dp"
        android:textStyle="bold"
        android:textColor="#FFFFCC"
        />
        
        <ImageButton android:id="@+android:id/actionbar_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:contentDescription="@string/actionbar_new"
        android:src="@android:drawable/ic_menu_add"
        android:tint="#FFFFCC"
        android:background="#CC3333"
        />
        
        <ImageButton android:id="@+android:id/actionbar_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:contentDescription="@string/actionbar_currency"
        android:src="@android:drawable/ic_menu_preferences"
        android:tint="#FFFFCC"
        android:background="#CC3333"/>
        
    </LinearLayout>
    
    <ListView android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    
    <LinearLayout  
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#CC3333">
        
  	    <TextView android:id="@+android:id/footer_cost_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:textSize="22dp"
        android:textStyle="bold"
        android:textColor="#FFFFCC"/>
  	</LinearLayout>
</LinearLayout>